--- a/tests/TestMain.lfm
+++ b/tests/TestMain.lfm
@@ -7,7 +7,7 @@ object Form1: TForm1
   ClientHeight = 361
   ClientWidth = 967
   Menu = MainMenu1
-  LCLVersion = '1.6.2.0'
+  LCLVersion = '1.6.0.4'
   object GroupBox1: TGroupBox
     Left = 0
     Height = 352
@@ -46,6 +46,7 @@ object Form1: TForm1
         ''
         '{"jwt":"TABAKOV", "id":1001}'
       )
+      OnChange = Memo3Change
       TabOrder = 2
     end
     object Memo1: TMemo
