--- a/tests/TestMain.lfm
+++ b/tests/TestMain.lfm
@@ -1,13 +1,15 @@
 object Form1: TForm1
-  Left = 819
+  Left = 646
   Height = 361
-  Top = 149
+  Top = 242
   Width = 967
   Caption = 'Form1'
   ClientHeight = 361
   ClientWidth = 967
   Menu = MainMenu1
-  LCLVersion = '1.6.0.4'
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
+  LCLVersion = '1.6.2.0'
   object GroupBox1: TGroupBox
     Left = 0
     Height = 352
@@ -46,7 +48,6 @@ object Form1: TForm1
         ''
         '{"jwt":"TABAKOV", "id":1001}'
       )
-      OnChange = Memo3Change
       TabOrder = 2
     end
     object Memo1: TMemo
