--- a/tests/TestMain.lfm
+++ b/tests/TestMain.lfm
@@ -9,6 +9,7 @@ object Form1: TForm1
   Menu = MainMenu1
   OnCreate = FormCreate
   OnDestroy = FormDestroy
+  OnShow = FormShow
   LCLVersion = '1.6.2.0'
   object GroupBox1: TGroupBox
     Left = 0
